--- a/phylogene_app/templates/Hunter-Gaston.html
+++ b/phylogene_app/templates/Hunter-Gaston.html
@@ -34,6 +34,8 @@ for n in range(14):
 	 {% block content %}
 	 <!-- <script src="http://visjs.org/dist/vis.js"></script> -->
 	 <script src="https://unpkg.com/vis-network@9.1.0/standalone/umd/vis-network.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
 	 <!-- <link href="http://visjs.org/dist/vis.css" rel="stylesheet" type="text/css" /> -->
 	 <link href="https://unpkg.com/browse/vis-network@9.1.0/styles/vis-network.min.css" rel="stylesheet" type="text/css" />
@@ -72,78 +74,60 @@ for n in range(14):
 
 
 	// Début HGDI
-var numberstraintested = lastItem.length ;
+    var retrievedObject = localStorage.getItem('TableauduCSV');
 
-var difftypenum = [], count = 0, i = 0;
-for(i=0; i<lastItem.length; i++) {
-    if(difftypenum[lastItem[i]] == undefined) {
-        difftypenum[lastItem[i]] = 1;
-        count++;
-    }
+damienitem = JSON.parse(retrievedObject).length
+
+var hdgi1 = [];
+var hdgi2 = [];
+
+for (var i = 0; i < damienitem; i++) { 
+  damien = JSON.parse(retrievedObject)[i];
+
+	var numberstraintested = damien.length ;
+	var difftypenum = [], count = 0;
+  var numberstrainpertype = {};
+  
+  if(difftypenum[damien] == undefined) {
+    	    difftypenum[damien] = 1;
+      	  count++;
+    	}
+
+	
+	damien.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
+
+	for (const [key, value] of Object.entries(numberstrainpertype)) {
+  	  console.log(`${key}: ${value}`);
+    	sumStrain(numberstrainpertype[`${key}`])
+    	//sum =  ${value} ;
+	}
+
+	function sumStrain(a){
+  	  var total=0;
+    	for(var k in a) {
+      	  total += a[k]*(a[k]-1);
+    	}
+    	return total;
+	}
+	
+  
+  
+	var SumNumbDiffStrain = sumStrain(numberstrainpertype) ;
+  
+  hdgi1.push(1 / (numberstraintested * (numberstraintested-1)));
+
+  hdgi2.push(1-(hdgi1[i] * SumNumbDiffStrain));
+  
+  
+
 }
-//console.log(count);
-//test comptage
-var numberstrainpertype = {};
-lastItem.forEach(function (x) { numberstrainpertype[x] = (numberstrainpertype[x] || 0) + 1; });
-
-//var sum = 0;
-
-for (const [key, value] of Object.entries(numberstrainpertype)) {
-    console.log(`${key}: ${value}`);
-    //sum =  ${value} ;
-}
-
-//tester dans la console : Object.values(numberstrainpertype).forEach(val => console.log(val)); JSON.parse(localStorage.getItem('TableauduCSV'));
-
-// fin test
-
-//test var data
-/* var numbervar = {};
-JSON.parse(localStorage.getItem('TableauduCSV')).forEach(function (x) { numbervar[x] = (numbervar[x] || 0) + 1; });
-
-var sum = 0;
-
-for (const [key, value] of Object.entries(numbervar)) {
-    console.log(`${key}: ${value}`);
-    //sum =  ${value} ;
-}
- 
-
- function printArray(arr){
-    for(var i = 0; i < arr.length; i++){
-        if(arr[i] instanceof Array){
-            printArray(arr[i]);
-        }else{
-            console.log(arr[i]);
-        }
-    }
-}
-
-printArray(JSON.parse(localStorage.getItem('TableauduCSV')));
-*/
-
-
-//fin test var data
-
-//début fonction calcul somme des souches
-
-function sumStrain(a){
-    var total=0;
-    for(var i in a) {
-        total += a[i]*(a[i]-1);
-    }
-    return total;
-}
-
-//fin fonction calcul somme des souches
-
-var SumNumbDiffStrain = sumStrain(numberstrainpertype) ;
-
-var hdgi1 = 1 / (numberstraintested * (numberstraintested-1));
-
-var hdgi2 = 1-(hdgi1 * SumNumbDiffStrain) ;
-
 // Fin HGDI
+
+$(document).ready(function () {
+    $('#example').DataTable({
+        data: hdgi2,
+    });
+});
 
 
        //window.alert(hdgi2);
@@ -153,13 +137,49 @@ var hdgi2 = 1-(hdgi1 * SumNumbDiffStrain) ;
 
    <div class="container-fluid" style="background-color: #a6aaa9;" >
 	   <div class="col-lg-10" style="float:none;margin:auto;background-color: #ffffff;">
+        <div class="container">
+            <div id="tab_data" class="row" style="position: relative; overflow: scroll; width: 100%; max-height: 700px; height: 700px;">
+                <form  id="form1" autocomplete="off" method="POST" action="">
+                    {% csrf_token %}
+                    <table id="example" class="display" cellspacing="0">
+                    {% for row in fichier %}
+                    {% if forloop.first %}
+        
+                        <thead>
+                             <tr>    
+                                {% for column in row %}
+                                    <th>{{column}}</th>
+                                {% endfor %}
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            {% else %}
+                            <tr>
+                            {% for column in row %}
+                                <td>{{column}}</td>
+                            {% endfor %}
+                            </tr>
+                            {% endif %}
+                            {% endfor %}
+                        </tbody>
+                        
+
+                    </table>
+                </form>
+            </div>
+        </div>
+       </div>
+   </div>
+   {% endblock %}
 
 		 <div id="hunter-gaston" style="text-align: center;">
              HGDI : <script type="text/javascript">
             document.write(hdgi2)
          </script>
          </div>
-   {% endblock%}
+   
 
    </div>
    </div>
+ 
