--- a/phylogene_app/templates/import_data.html
+++ b/phylogene_app/templates/import_data.html
@@ -50,10 +50,11 @@
 
                         <button name="reset" type="button" id="reset" class="offset-md-6 btn btn-primary" > Reset </button>
                         <!-- Fin ajout-->
-
+                        <tr id="test_head">
                         {% for column in row %}
                             <th>{{column}}</th>
                         {% endfor %}
+                    </tr>
                     </tr>
 
                     <tr class="column-selector">
@@ -82,10 +83,10 @@
         <input id="submit4" name="boxplot"   class="btn btn-primary" type="submit" value="boxplot" onclick="this.form.submited=this.value;" >
         <input id="submit5" name="heatmap"   class="btn btn-primary" type="submit" value="heatmap" onclick="this.form.submited=this.value;" >
         <input id="submit6" name="pca"   class="btn btn-primary" type="submit" value="pca" onclick="this.form.submited=this.value;" >
-        <input id="submit7" name="enthropie"   class="btn btn-primary" type="submit" value="enthropie" onclick="this.form.submited=this.value;" >
-        <input id="submit8" name="chart"   class="btn btn-primary" type="submit" value="chart" onclick="this.form.submited=this.value;" >
+        <input id="submit7" name="Entropy"   class="btn btn-primary" type="submit" value="Entropy" onclick="this.form.submited=this.value;" >
+        <input id="submit8" name="Global Map"   class="btn btn-primary" type="submit" value="Global Map" onclick="this.form.submited=this.value;" >
         <input id="submit9" name="Hunter-Gaston"   class="btn btn-primary" type="submit" value="Hunter-Gaston" onclick="this.form.submited=this.value;" >
-
+        <input id="submit10" name="Shannon-Entropy"   class="btn btn-primary" type="submit" value="Shannon-Entropy" onclick="this.form.submited=this.value;" >
     </form>
     </div>
     <br/>
@@ -218,11 +219,11 @@ $(document).ready(function (){
         data_column_selected=array;
 
        /*  $('#store').on('click', function(){
-            localStorage.setItem('myArray', array);
+            sessionStorage.setItem('myArray', array);
         });
 
         $('#get').on('click', function(){
-            var myArraytable = localStorage.getItem('myArray');
+            var myArraytable = sessionStorage.getItem('myArray');
             alert(array);
         }); */
         //les indexes des colonnes selectionné par l'utilisateur
@@ -299,13 +300,24 @@ function checkAll(myCheckbox){
     }
 
     $("#store").click(function(){
-        localStorage.setItem('TableauduCSV', JSON.stringify(data_column_selected));
-        var retrievedObject = localStorage.getItem('TableauduCSV');
+        sessionStorage.setItem('TableauduCSV', JSON.stringify(data_column_selected));
+        var retrievedObject = sessionStorage.getItem('TableauduCSV');
         console.log('retrievedObject: ', JSON.parse(retrievedObject));        
     })
 
+
     $("#reset").click(function(){
-        localStorage.clear('TableauduCSV');
+        sessionStorage.clear('TableauduCSV');
+    })
+
+    var test_head = document.getElementById("test_head"); 
+    
+    $("#submit9").click(function(){
+        sessionStorage.setItem('test_head', JSON.stringify(test_head.innerText));
+    })
+
+    $("#submit10").click(function(){
+        sessionStorage.setItem('test_head', JSON.stringify(test_head.innerText));
     })
 
 
