--- a/phylogene_app/templates/chart.html
+++ b/phylogene_app/templates/chart.html
@@ -1,3 +1,12 @@
+{% load static %}
+
+<head>
+  {% block head %}
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+  <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+  <title>Global Map</title>
+  {% endblock %}
+</head> 
 
 {% block content %}
 <html>
@@ -33,7 +42,7 @@
           }     
            
           var options = {
-            
+                      
            };
 
           var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
@@ -49,7 +58,8 @@
     {% endblock%}
   </head>
   <body>
-    <div id="regions_div" style="width: 900px; height: 500px;"></div>
+    <h1 style="text-align: center;" >Global Map</h1>
+    <div id="regions_div" style="width: 900px; height: 500px; margin: 0 auto;"></div>
   </body>
 </html>
 
