Correction +  Amélioration visuelle
L'option neighbor_joining nécessitait de sélectionner/déselectionner un certains nombre de données dans le tableau afin de fonctionner . Maintenant, ceci est fait automatiquement

De plus le résultat obtenu est maintenant plus lisible et il y a possibilité de récupérer le graphique sous forme de Newick.

--- a/phylogene_app/templates/neighbor_joining.html
+++ b/phylogene_app/templates/neighbor_joining.html
@@ -1,30 +1,60 @@
-{% extends 'base.html' %}
 {% load static %}
+
+<head>
+    {% block head %}
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+    <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
+    <title>Neighbor-joining</title>
+    {% endblock %}
+</head>
 {% block content %}
-
-
-<div id="svgCanvas"> </div>
 <style>
 #svgCanvas
 {
     background-color: #ffffff;
 }
 </style>
-
 {% endblock %}
 
-{%block javascripts %}
-{{block.super}}
-<script src="{% static 'js/raphael-min.js' %}"></script>
-<script src="{% static 'js/jsphylosvg-min.js' %}"></script>
-<script>
-    str_newick="{{labels}}"+";";
-    dataObject={newick: str_newick};
-    phylocanvas = new Smits.PhyloCanvas
-    (
-    dataObject,
-    'svgCanvas',
-    1000, 1000
-    );
-</script>
-{% endblock %}
+<div class="container-fluid" style="background-color: #a6aaa9;" >
+    <h1 style="text-align: center;" >NEIGHBOR_JOINING</h1>
+    <div class="col-lg-10" style="float:none;margin:auto;background-color: #ffffff;">
+     <div class="container">
+       <div id="tab_data" class="table-responsive" >
+         <form  id="form1" autocomplete="off" method="POST" action="">
+         
+            {%block javascripts %}
+            <script src="{% static 'js/raphael-min.js' %}"></script>
+            <script src="{% static 'js/jsphylosvg-min.js' %}"></script>
+            
+            <div id="svgCanvas" style="width: 1000px; height: 1000px; margin: 0 auto;"> </div>
+
+            <script>
+                str_newick="{{labels}}"+";";
+                dataObject={newick: str_newick};
+                phylocanvas = new Smits.PhyloCanvas
+                (
+                dataObject,
+                'svgCanvas',
+                1000, 1000
+                );
+            </script>
+
+            <label for="message">Newick Format :</label>
+            <div class="full-width">
+                <textarea id="message" rows="5" cols="150"></textarea>
+            </div>
+            
+            <script>
+                var textarea = document.getElementById('message');
+                textarea.value = str_newick;
+            </script>
+            </form>
+         </div>
+     </div>
+    </div>
+</div>
+{% endblock %} 
+
+</div>
+</div>
